[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Brendan Viscomi <brendan@brendanviscomi.com>"]
description = "A read-it-later app"
name = "lynx"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.7"
trafilatura = "1.6.1"
[tool.poetry.dev-dependencies]
