[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Brendan Viscomi <brendan@brendanviscomi.com>"]
description = "A read-it-later app"
name = "lynx"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
trafilatura = "1.6.1"
readtime = "3.0.0"
readability-lxml = "0.8.1"
requests = "2.31.0"
openai = "1.3.5"
django-ninja = "1.0.1"
django-extra-views = "0.14.0"
django-compressor = "4.4"
[tool.poetry.dev-dependencies]
django-types = "0.19.1"
