[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Brendan Viscomi <brendan@brendanviscomi.com>"]
description = "A read-it-later app"
name = "lynx"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
trafilatura = "1.6.1"
readtime = "3.0.0"
readability-lxml = "0.8.1"
openai = "1.3.5"
django-ninja = "1.0.1"
django-extra-views = "0.14.0"
beautifulsoup4 = "4.12.2"
feedparser = "6.0.11"
django-autoslug = "1.9.9"
django4-background-tasks = "1.2.9"
gunicorn = "21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
uvicorn = "0.27.0.post1"
psycopg = "3.1.18"
httpx = "0.26.0"
django-query-parameters = "0.2.3"
anthropic = "0.21.3"
[tool.poetry.dev-dependencies]
django-types = "0.19.1"
